--- a/spiderweb2/WebContent/admin/ajax/allmanage.html
+++ b/spiderweb2/WebContent/admin/ajax/allmanage.html
@@ -5,7 +5,7 @@
 		<title></title>
 		<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-		<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+		</script>
 		<link rel="stylesheet" href="../../Css/ManageStyle.css" />
 	</head>
 	<body>
@@ -72,7 +72,6 @@
 					</div>
 				</div>	
 			</div>
-			
 			<div class="row rowmagins">
 				<div class="col-md-6 col-xs-offset-3">
 					<div class="form-group">
