--- a/spiderweb2/WebContent/admin/ajax/allmanage.html
+++ b/spiderweb2/WebContent/admin/ajax/allmanage.html
@@ -5,8 +5,9 @@
 		<title></title>
 		<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-		</script>
 		<link rel="stylesheet" href="../../Css/ManageStyle.css" />
+		<script type="text/javascript" src="../../Js/jquery-3.2.1.min.js"></script>
+		<script type="text/javascript" src="../../Js/ajax.js"></script>
 	</head>
 	<body>
 		<!--网站信息管理:
@@ -26,7 +27,17 @@
 					<div class="form-group">
 						<label class="col-sm-3 control-label">网站名称</label>
 						<div class="col-sm-11">
-							<input type="text" class="form-control" placeholder="请输入网站名称" >
+							<input type="text" name="web_Name" class="form-control" placeholder="请输入网站名称" >
+						</div>
+					</div>
+				</div>	
+			</div>
+			<div class="row">
+				<div class="col-md-6 col-xs-offset-3">
+					<div class="form-group">
+						<label class="col-sm-3 control-label">网站关键字</label>
+						<div class="col-sm-11">
+							<input type="text" name="web_Keyword" class="form-control" placeholder="请输入网站关键字" >
 						</div>
 					</div>
 				</div>	
@@ -36,7 +47,7 @@
 					<div class="form-group">
 						<label class="col-sm-3 control-label">网站介绍</label>
 						<div class="col-sm-11">
-							<textarea class="form-control" rows="3" placeholder="请输入网站的基本介绍"></textarea>
+							<textarea class="form-control" name="web_introduce" style="resize:none" rows="3" placeholder="请输入网站的基本介绍"></textarea>
 						</div>
 					</div>
 				</div>	
@@ -47,10 +58,10 @@
 						<label class="col-sm-5 control-label">是否面向游客开放</label>
 						<div class="col-sm-11">
 							<label class="radio-inline">
-								<input type="radio" name="open" value="yes" />是
+								<input type="radio" name="open" value="1" />是
 							</label>
 							<label class="radio-inline">
-								<input type="radio" name="open" value="no" checked />否
+								<input type="radio" name="open" value="0" checked />否
 							</label>
 						</div>
 					</div>
@@ -76,7 +87,7 @@
 				<div class="col-md-6 col-xs-offset-3">
 					<div class="form-group">
 						<div class="col-sm-11">
-							<button type="button" class="btn btn-primary btn-lg ad_right">修改</button>
+							<button type="button" id="send_info" class="btn btn-primary btn-lg ad_right">修改</button>
 						</div>
 					</div>
 				</div>	
