--- a/spiderweb2/WebContent/admin/ajax/email.html
+++ b/spiderweb2/WebContent/admin/ajax/email.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8">
 <title></title>
-	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+	<link type="text/css" rel="stylesheet" href="../../Css/bootstrap.min.css">
+	<link type="text/css" rel="stylesheet" href="../../Css/bootstrap-theme.min.css">
 	<link type="text/css" href="../../Css/ManageStyle.css" rel="stylesheet" >
 	<script type="text/javascript" src="../../Js/dropdown.js"></script>
 	<script type="text/javascript" src="../../Js/jquery-3.2.1.min.js"></script>
