--- a/kuqi-Top/kuqi-Web/src/main/webapp/admin/classify.html
+++ b/kuqi-Top/kuqi-Web/src/main/webapp/admin/classify.html
@@ -106,7 +106,7 @@
           <div class="dropdown-menu" aria-labelledby="pagesDropdown">
             <h6 class="dropdown-header">Blog Screens:</h6>
             <a class="dropdown-item" href="updataBlog">信息操作</a>
-            <a class="dropdown-item" href="register.html">友链操作</a>
+            <a class="dropdown-item" href="link">友链操作</a>
             <a class="dropdown-item" href="register.html">主题操作</a>
           </div>
         </li>
@@ -117,7 +117,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="pagesDropdown">
             <h6 class="dropdown-header">User Screens:</h6>
-            <a class="dropdown-item" href="login.html">操作</a>
+            <a class="dropdown-item" href="users">操作</a>
           </div>
         </li>
       </ul>
