--- a/kuqi-Top/kuqi-Web/src/main/webapp/admin/friendLink.html
+++ b/kuqi-Top/kuqi-Web/src/main/webapp/admin/friendLink.html
@@ -115,7 +115,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="pagesDropdown">
             <h6 class="dropdown-header">User Screens:</h6>
-            <a class="dropdown-item" href="login.html">操作</a>
+            <a class="dropdown-item" href="users">操作</a>
           </div>
         </li>
       </ul>
@@ -306,8 +306,11 @@
 		$(function(){
 			var pagerAll = $("#pagerAll").val();
 			var pagerNow = $("#pagerNow").val();
+			if(pagerNow == 0){
+				pagerNow = 1;
+			}
 			var pagins = new pagination("pagination","link",pagerAll,pagerNow,5,5);
-			pagins.init();
+			pagins.show();
 		});
 		//友情链接 -- 添加
 		function addLink(){
@@ -407,7 +410,6 @@
 				}
 			});
 		}
-		
 		
 		//删除友链
 		function ajaxDelete(number,strs){
