--- a/kuqi-Top/kuqi-Web/src/main/webapp/admin/showText.html
+++ b/kuqi-Top/kuqi-Web/src/main/webapp/admin/showText.html
@@ -15,37 +15,17 @@
 	</head>
 	<body>
 		<div class="container">
-			<h1 th:text="${title}">标题</h1>				
-			<div th:utext="${text}">
-				内容
-			</div>
-			<div id="pagination">
-				<nav aria-label="Page navigation example">
-				  <ul class="pagination">
-				    <li>
-				      <a href="#" aria-label="Previous">
-				        <span aria-hidden="true">&laquo;</span>
-				      </a>
-				    </li>
-				    <li><a href="#">1</a></li>
-				    <li><a href="#">2</a></li>
-				    <li><a href="#">3</a></li>
-				    <li><a href="#">4</a></li>
-				    <li><a href="#">5</a></li>
-				    <li>
-				      <a href="#" aria-label="Next">
-				        <span aria-hidden="true">&raquo;</span>
-				      </a>
-				    </li>
-				  </ul>
-				</nav>
-			</div>
+			<div class="pa"></div>
 		</div>
 	</body>
 	<script>
 		$(function(){
 			var pagins = new pagination("pagination",100,1,5,5);
 //			pagins.init();
+			var html = '';
+			html += '<div><p><b>这是第一个div</b></p></div>';
+			html += '<i class="fa fa-address-book" aria-hidden="true"></i>';
+			$('.pa').html(html);
 		});
 	</script>
 </html>
